build: release 25.8.4